fix: report missing required dropdown field in process creation dialog